<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActicity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:fontFamily="@font/indigo_daisy"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/tv_subtitle"/>

    <TextView
        android:id="@+id/tv_subtitle"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_email"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/tag"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/e_mail"
        android:inputType="text"
        android:padding="15dp"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:padding="15dp"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textPassword"
            android:layout_centerInParent="true"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:background="@drawable/btn_custom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@android:color/white"
        android:text="@string/login"/>


</RelativeLayout>